--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -20,3 +20,29 @@ exclude = '''
 
 [build-system]
 requires = ["setuptools", "wheel", "Cython"]
+
+[project]
+name = "nvtx"
+version = "0.2.10"
+description="PyNVTX - Python code annotation library"
+license = { text = "Apache 2.0" }
+authors = [{name = "NVIDIA Corporation"}]
+classifiers = [
+    "Intended Audience :: Developers",
+    "Topic :: Database",
+    "Topic :: Scientific/Engineering",
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
+
+[project.urls]
+Homepage = "https://github.com/NVIDIA/NVTX"
+
+[tool.setuptools.package-data]
+"nvtx._lib" = ["*.pxd"]
