--- a/.github/workflows/cibw.yml
+++ b/.github/workflows/cibw.yml
@@ -66,7 +66,7 @@ jobs:
         CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
         CIBW_MANYLINUX_AARCH64_IMAGE: manylinux2014
         CIBW_TEST_COMMAND: "pytest {package}/tests"
-        CIBW_TEST_REQUIRES: "pytest Cython"
+        CIBW_TEST_REQUIRES: "pytest Cython setuptools"
         CIBW_REPAIR_WHEEL_COMMAND_LINUX: 'auditwheel repair -w {dest_dir} {wheel}'
       with:
         output-dir: dist
