--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -51,7 +51,7 @@ License = "https://nvidia.github.io/NVTX/LICENSE.txt"
 Issues = "https://github.com/NVIDIA/NVTX/issues"
 
 [project.optional-dependencies]
-test = ["pytest", "Cython==3.0.11"]
+test = ["pytest", "Cython==3.0.11", "setuptools"]
 
 [tool.setuptools.package-data]
 "nvtx._lib" = ["*.pxd"]
